# src/routes/contract.route.ts
@@ -14,6 +14,7 @@ class ContractRoute implements Routes {
 
   private initializeRoutes() {
     this.router.get(`${this.path}/apikey/:apiKey/wallet/:walletAddress`, this.contractController.getSbtsFromUser);
+    this.router.post(`${this.path}/apikey/:apiKey/wallet/:walletAddress`, this.contractController.mintSbt);
   }
 }
 
